# rustbox-hifive1-revb

./: .gitignore  Cargo.toml  Makefile  README.md  gdb_init
.cargo/: config
console/: Cargo.toml
console/src/: fsm.rs  hash.rs  input.rs  lock.rs  main.rs  repl.rs  terminal.rs  tree.rs
examples/: color_type.rs  gpio_button.rs  gpio_button_interrupt.rs  hello_world.rs  interrupt.rs  spi_wifi.rs
rustbox/: Cargo.toml
rustbox/examples/: hello_world.rs
rustbox/src/: main.rs
rustbox/src/asm/: boot.S  trap.S
rustbox/src/lds/: memory-fe310.x  memory-hifive1-revb.x
scripts/: bmp_convert.py  debug  upload  vgaterm-build.sh
src/: main.rs
src/lds/: memory-hifive1-revb.x  virt.lds
vgaterm/: Cargo.toml
vgaterm/src/: color.rs  main.rs  text.rs  vga.rs
