[package]
name = "rustbox-hifive1-revb"
version = "0.0.1"
authors = ["dougli1sqrd <dougli1sqrd+git@gmail.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.3"
hifive1 = { version = "0.9.0", features = ["board-hifive1-revb"] }
panic-halt = "0.2.0"
riscv = "0.6.0"
riscv-rt = "0.8.0"
spin = "0.9.0"
bare-metal = "0.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
# e310x = "0.9.0"

# this lets you use `cargo fix`!
# [[bin]]
# name = "rustbox-hifive1-revb"
# test = false
# bench = false

# [lib]
# crate-type = ["staticlib"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
