[package]
name = "console"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
hifive1 = { version = "0.10.0", features = ["board-hifive1-revb"] }
panic-halt = "0.2.0"
riscv = "0.7.0"
riscv-rt = "0.8.0"
linked_list_allocator = "0.9.0"
volatile = "0.4.4"
heapless = "0.7.7"
buddyalloc = "0.1.5"
lock_api = "0.4.5"
lazy_static = "1.4.0"
hashbrown = {version = "0.11.2", default-features = false, fatures = []}

[dependencies.spinning_top]
version = "0.2.4"
